--- a/index.html
+++ b/index.html
@@ -40,18 +40,26 @@
           </li>
         </ul>
 
-        <!-- NEW: Recent activity peek -->
+        <!-- MINI DASHBOARD -->
         <section class="recent-activity">
           <h2>Recent Activity</h2>
           <div class="recent-activity-box">
-            <ul id="recent-activity-items" class="recent-activity-list">
-              <!-- Filled by JS -->
-            </ul>
-            <div class="recent-activity-footer">
-              <a href="faucet-status.php">View full status &rarr;</a>
+            <div class="recent-activity-header">
+              <span class="recent-head-id">ID</span>
+              <span class="recent-head-invoice">Invoice</span>
+              <span class="recent-head-status">Status</span>
+              <span class="recent-head-time">Time</span>
             </div>
+
+            <ul id="recent-activity-items" class="recent-activity-list">
+              <!-- JS fills rows here -->
+            </ul>
+          </div>
+          <div class="recent-activity-footer">
+            <a href="faucet-status.php">View full status &rarr;</a>
           </div>
         </section>
+
       </aside>
 
       <!-- Main content -->
@@ -184,6 +192,7 @@
             if (data.status === "queued") {
               statusEl.textContent = data.message + " (Invoice: " + data.invoice + ")";
               statusEl.classList.add("status-success");
+              window.refreshRecentActivity(); // refresh recent activity list
             } else if (data.status === "already_claimed") {
               statusEl.textContent = data.message + " (Invoice: " + data.invoice + ")";
               statusEl.classList.add("status-error");
@@ -219,7 +228,8 @@
         if (!items || !items.length) {
           const li = document.createElement("li");
           li.className = "recent-activity-item";
-          li.innerHTML = '<div class="recent-col-id">–</div>' +
+          li.innerHTML =
+            '<div class="recent-col-id">–</div>' +
             '<div class="recent-col-invoice">No activity yet.</div>' +
             '<div class="recent-col-status"></div>' +
             '<div class="recent-col-time"></div>';
@@ -231,44 +241,45 @@
           const li = document.createElement("li");
           li.className = "recent-activity-item";
 
-          // Column 1: ID
+          // Col 1: ID
           const colId = document.createElement("div");
           colId.className = "recent-col-id";
           colId.textContent = item.id;
 
-          // Column 2: small box with "ln…" and tooltip
+          // Col 2: invoice pill (short text, full in tooltip)
           const colInvoice = document.createElement("div");
           colInvoice.className = "recent-col-invoice";
           const pill = document.createElement("span");
           pill.className = "recent-invoice-pill";
-          pill.title = item.invoiceFull || "";      // full invoice on hover
+          pill.title = item.invoiceFull || ""; // full invoice on mouseover
+
           const icon = document.createElement("span");
           icon.className = "recent-invoice-icon";
           icon.textContent = "⚡";
+
           const text = document.createElement("span");
           text.textContent = item.invoiceShort || "ln…";
+
           pill.appendChild(icon);
           pill.appendChild(text);
           colInvoice.appendChild(pill);
 
-          // Column 3: status pill with color & icon
+          // Col 3: status pill
           const colStatus = document.createElement("div");
           colStatus.className = "recent-col-status";
+
           const statusPill = document.createElement("span");
           const key = (item.statusKey || "").toLowerCase();
           let cssKey = key;
           if (key === "pending" || key === "processing") cssKey = "pending";
           if (key === "failed" || key === "blocked") cssKey = "failed";
+
           statusPill.className = "recent-status-pill recent-status-" + cssKey;
 
           const statusIcon = document.createElement("span");
-          if (key === "paid") {
-            statusIcon.textContent = "✅";
-          } else if (key === "failed" || key === "blocked") {
-            statusIcon.textContent = "⚠️";
-          } else {
-            statusIcon.textContent = "⏳";
-          }
+          if (key === "paid") statusIcon.textContent = "✅";
+          else if (key === "failed" || key === "blocked") statusIcon.textContent = "⚠️";
+          else statusIcon.textContent = "⏳";
 
           const statusText = document.createElement("span");
           statusText.textContent = item.status || "";
@@ -277,42 +288,44 @@
           statusPill.appendChild(statusText);
           colStatus.appendChild(statusPill);
 
-          // Column 4: clock icon with tooltip = last updated time
+          // Col 4: clock icon with tooltip = last updated
           const colTime = document.createElement("div");
           colTime.className = "recent-col-time";
           const timeSpan = document.createElement("span");
           timeSpan.className = "recent-time-icon";
           timeSpan.textContent = "🕒";
+
           const lastTime = item.updatedAt || item.createdAt || "";
-          timeSpan.title = lastTime ? ("Last update: " + lastTime + " UTC") : "No timestamp";
+          timeSpan.title = lastTime
+            ? "Last update: " + lastTime + " UTC"
+            : "No timestamp";
+
           colTime.appendChild(timeSpan);
 
           li.appendChild(colId);
           li.appendChild(colInvoice);
           li.appendChild(colStatus);
           li.appendChild(colTime);
-
           listEl.appendChild(li);
         });
       }
 
-      function refreshRecentActivity() {
+      window.refreshRecentActivity = function () {
         fetch("recent-activity.php", { cache: "no-store" })
           .then(function (res) { return res.json(); })
           .then(function (data) {
             renderItems(data.items || []);
           })
-          .catch(function (err) {
-            // Optional: console.log(err);
+          .catch(function () {
+            // You can log errors if you want
           });
-      }
+      };
 
-      // Initial load + poll every few seconds
-      refreshRecentActivity();
-      setInterval(refreshRecentActivity, 6000); // every 6 seconds
+      // Initial load + poll
+      window.refreshRecentActivity();
+      setInterval(window.refreshRecentActivity, 6000); // every 6 seconds
     })();
   </script>
-
 
 </body>
 
