Updated satoshi logic and admin page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- Left column / sidebar -->
       <aside class="sidebar">
         <h2>Balance</h2>
-        <div class="sidebar-value" id="available-balance">▲ 75&nbsp;000 satoshis available</div>
+        <div class="sidebar-value" id="available-balance">▲ satoshis available</div>
         <h2>Other Sites</h2>
         <ul>
           <li><a href="https://bitcointalk.org" target="_blank" rel="noopener noreferrer">bitcointalk.org</a></li>
@@ -341,6 +341,7 @@
       //setInterval(window.refreshRecentActivity, 6000); // every 6 seconds
     })();
   </script>
+  <script src="scripts/faucet.js" async defer></script>
 </body>
 
 </html>
