Update stoshi lagic

--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>The Satoshi Faucet - Free Satoshis</title>
+
+
+
+  <!-- Primary SEO -->
+  <title>The Satoshi Faucet – Free Bitcoin & Free Satoshis (Lightning LNURL Faucet)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-    content="The Satoshi Faucet - a nostalgic tribute faucet giving away a few satoshis to keep the legacy alive." />
+    content="The Satoshi Faucet gives you free Bitcoin (satoshis) instantly using Lightning LNURL. A modern revival of the legendary Bitcoin Faucet. Learn how to get free bitcoin safely and easily.">
+
+  <meta name="keywords" content="
+free bitcoin,
+free bitcoins,
+bitcoin faucet,
+the bitcoin faucet,
+the satoshi faucet,
+free satoshis,
+how to get free bitcoin,
+how to get free satoshis,
+lightning bitcoin faucet,
+lnurl faucet,
+bitcoin lightning faucet,
+free btc,
+bitcoin rewards,
+earn bitcoin free
+">
+
+  <meta name="author" content="The Satoshi Faucet">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (for social & previews) -->
+  <meta property="og:title" content="The Satoshi Faucet – Free Bitcoin via Lightning LNURL">
+  <meta property="og:description"
+    content="Get free Bitcoin (satoshis) from The Satoshi Faucet. A modern Lightning LNURL Bitcoin faucet inspired by the legendary original Bitcoin Faucet.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thesatoshifaucet.com/">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="The Satoshi Faucet – Free Bitcoin & Free Satoshis">
+  <meta name="twitter:description"
+    content="Earn free satoshis using a Lightning LNURL Bitcoin faucet. No wallet keys stored. Classic faucet, modern tech.">
+
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </head>
@@ -66,8 +104,18 @@
       <main>
         <div class="faucet-panel">
           <div class="faucet-panel-title">Get Satoshis from the Satoshi Faucet</div>
+
+          <p>
+            The Satoshi Faucet is a v2 of <strong>Bitcoin faucet</strong> that lets you
+            <strong>get free bitcoin</strong> in the form of satoshis using
+            <strong>Lightning LNURL</strong>.
+            Inspired by the legendary <em>The Bitcoin Faucet</em>,
+            this site brings back the classic idea of earning free BTC with modern technology.
+          </p>
+
           <p class="faucet-panel-text">
-            I’m giving away a few satoshis per visitor. Just complete the reCAPTCHA, enter your Lightning or Bitcoin
+            Bitcoin faucet 2.0 is now giving away a few satoshis per visitor. Just complete the reCAPTCHA, 
+            enter your Lightning (lnurl1...)
             receiving address, and press <strong>Get Some!</strong>
           </p>
 
